# microcap-mcp

./: .gitignore  LICENSE  README.en.md  README.md  pyproject.toml
.github/workflows/: tests.yml
docs/: micro-cap-notes.en.md  micro-cap-notes.md
eval/: harness.py
src/microcap_mcp/: __init__.py  cir.py  corpus.py  draw.py  knowledge.py  parser.py  quiet.py  runner.py  schematic.py  server.py
tests/: test_cir.py  test_draw.py  test_integration.py  test_knowledge.py  test_parser.py  test_runner.py  test_schematic.py  test_solver_report.py
