[project]
name = "microcap-mcp"
version = "0.1.0"
description = "MCP server exposing Micro-Cap 12 circuit simulation to LLM agents"
requires-python = ">=3.11"
dependencies = ["mcp>=1.2.0"]

[project.scripts]
microcap-mcp = "microcap_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/microcap_mcp"]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]
